# playlist

./: Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
assets/: pre-commit.rs
src/: main.rs
