[package]
name = "playlist"
version = "2.0.2"
edition = "2024"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
async-mpd = "0.6.0"
clap = { version = "4.4.9", features = ["derive"] }
directories = "6"
futures = "0.3.29"
log-lock = { git = "https://github.com/fenhl/log-lock", version = "0.2.5" }
mimalloc = "0.1.43"
path-slash = "0.2.1"
percent-encoding = "2.3.1"
rand = "0.9"
thiserror = "2"
tokio = { version = "1.34.0", features = ["io-util"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
wheel = { git = "https://github.com/fenhl/wheel" }
