[package]
name = "playlist"
version = "2.0.3"
edition = "2024"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
async-mpd = "0.6"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
directories = "6"
futures = "0.3"
itertools = "0.14"
lazy-regex = "3"
log-lock = { git = "https://github.com/fenhl/log-lock" }
mimalloc = "0.1"
path-slash = "0.2"
percent-encoding = "2"
rand = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
wheel = { git = "https://github.com/fenhl/wheel" }

[target."cfg(unix)".dependencies]
xdg = "3"
